--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
     "@prisma/client": "^6.4.1",
-    "axios": "^1.8.2",
+    "axios": "^1.8.3",
+    "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "zod": "^3.24.2"
   },
   "scripts": {
-    "dev": "bun --watch src/server.ts"
+    "dev": "bun --watch src/server.ts",
+    "migrate": "prisma migrate dev",
+    "studio": "prisma studio"
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
