--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "dependencies": {
+    "@fastify/multipart": "^9.0.3",
     "@prisma/client": "^6.4.1",
     "axios": "^1.8.3",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.2"
   },
   "scripts": {
@@ -14,6 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.13.9",
+    "@types/xlsx": "^0.0.36",
     "prisma": "^6.4.1"
   }
 }
